// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Link should render with the dropCap link not underlined 1`] = `
<a
  class="linkweb__RespLink-yfb9n-0 dbQloS"
  href="www.example.com"
  target="target"
>
  A
</a>
`;

exports[`Article Link should render with the link underlined 1`] = `
<a
  class="linkweb__RespLink-yfb9n-0 eiSqrz"
  href="www.example.com"
  target="target"
>
  a link
</a>
`;
